--- a/VeloNews/Views/Shared/AdminLayout.cshtml
+++ b/VeloNews/Views/Shared/AdminLayout.cshtml
@@ -24,13 +24,13 @@
             <div class="container">
                 <div class="login-block">
                     <div class="title">
-                        <div>VELO NEWS</div>
+                        <div><a href="/Home/Index">VELO NEWS</a></div>
                     </div>
                     <div class="auth">
                         <span class="material-symbols-outlined">
                             account_circle
                         </span>
-                        <div><a href="/User/Profile">Admin</a></div>
+                        <div><a href="/User/MyProfile">Admin</a></div>
                     </div>
                 </div>
             </div>
@@ -39,10 +39,13 @@
             <div class="container">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="/Home/Index">Home</a>
+                        <a href="/Admin/Index">Admin page</a>
                     </li>
                     <li class="nav-item">
                         <a href="/Admin/AllNews">All News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/Admin/AllUsers">All Users </a>
                     </li>
                     <li class="nav-item">
                         <a href="/Admin/UserActivity">User Activity</a>
