--- a/VeloNews/Views/User/MyProfile.cshtml
+++ b/VeloNews/Views/User/MyProfile.cshtml
@@ -3,7 +3,7 @@
 @using VeloNews.Services;
 @using Data.Interface.Models.enums;
 @using VeloNews.Localization.Views.User;
-@model ProfileViewModel
+@model MyProfileViewModel
 
 @section Styles {
     <link href="~/css/user.css" rel="stylesheet" type="text/css" />
