--- a/VeloNews/wwwroot/css/admin.css
+++ b/VeloNews/wwwroot/css/admin.css
@@ -252,6 +252,65 @@ a .news-row:hover {
         background: #ff6a00;
     }
 
+/*----ALL-USERS--------*/
+
+
+.user-header-item {
+    display: grid;
+    grid-template-columns: 0.5fr 2fr 1fr 1fr 1fr 1fr;   
+    grid-auto-rows: 50px;
+    text-align: center;
+    border: var(--main-border);
+    border-radius: 7px;
+    color: white;
+    background: var(--main-bg-color);
+}
+
+    .user-header-item > div {
+        padding: 15px 5px;
+    }
+
+        .user-header-item > div:not(:last-child) {
+            border-right: var(--main-border);
+        }
+
+.user-list-item {
+    display: grid;
+    grid-template-columns: 0.5fr 2fr 1fr 1fr 1fr 1fr;
+    min-height: 40px;
+    align-items: center;
+    text-align: center;
+    border: var(--main-border);
+    margin: 5px;
+    border-radius: 7px;
+}
+
+    .user-list-item:hover {
+        background: #ccccff;
+    }
+
+    .nuser-list-item > div:not(:last-child) {
+        border-right: var(--main-border);
+        padding: 10px 5px;
+    }
+
+
+.user-item-actions {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+    .user-item-actions div {
+        padding: 3px;
+        border-radius: 5px;
+        color: white;
+        width: 70px;
+        background: #ff6a00;
+    }
+
+
+
 
 /*-------ACTIVITY PAGE-----------*/
 
