--- a/VeloNews/Views/News/ShowNews.cshtml
+++ b/VeloNews/Views/News/ShowNews.cshtml
@@ -7,8 +7,8 @@
 @section Styles {
     <link href="~/css/news.css?v=3" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/trix@2.0.0/dist/trix.css">
-
 }
+
 @section Scripts {
     <script type="text/javascript" src="https://unpkg.com/trix@2.0.0/dist/trix.umd.min.js"></script>
     <script src="~/js/news/showNews.js"></script>
@@ -30,7 +30,7 @@
         </div>
         <div id="comment-anchor" class="back-btn"><a href="/News/Index">Back to news</a></div>
         <div class="comment-block">
-            @if (authService.GetCurrentUser() == null)
+            @if (authService.GetCurrentUserData() == null)
             {
                 <div class="unauthorized-user">
                     <a href="/User/Login">Войдите</a> или <a href="/User/Registration/">зарегиструйтесь</a> чтобы оставить комментарий.
@@ -86,7 +86,7 @@
                                 </div>
 
                                 <div class="comment-actions">
-                                    @if (authService.IsAdmin() || authService.GetCurrentUser() == authService.GetUserByName(comment.UserName))
+                                    @if (authService.IsAdmin() || authService.GetCurrentUserData().Name == authService.GetUserByName(comment.UserName).Name)
                                     {
                                         <a href="#comment-anchor" class="remove-comment">Удалить</a>
                                         <a href="#comment-anchor" class="edit-comment">Редактировать</a>
