add validation attributes to edit profile page

--- a/VeloNews/Views/User/EditMyProfile.cshtml
+++ b/VeloNews/Views/User/EditMyProfile.cshtml
@@ -37,7 +37,7 @@
                 </li>
                 <div class="block-item-title">Language</div>
                 <div class="block-item-input">
-                    <select asp-for="Language"
+                    <select asp-for="@Model.Language"
                             asp-items="@Model.Languages">
                         <option>Не указан</option>
                     </select>
