minor news view fix

--- a/VeloNews/Views/Admin/AllNews.cshtml
+++ b/VeloNews/Views/Admin/AllNews.cshtml
@@ -46,7 +46,7 @@
                         @news.Id
                     </div>
                     <div class="news-item-title">
-                       @news.Title
+                       <a href="/News/ShowNews?newsId=@news.Id">@news.Title</a>
                     </div>
                     <div>
                         @news.TimeOfCreation
