--- a/VeloNews/Views/User/EditMyProfile.cshtml
+++ b/VeloNews/Views/User/EditMyProfile.cshtml
@@ -35,13 +35,15 @@
                     <div class ="block-item-input"><input asp-for="DateOfBirth" type="date" /></div>
                     <div>@Html.ValidationMessageFor(x => x.DateOfBirth)</div>
                 </li>
-                <div class="block-item-title">Language</div>
-                <div class="block-item-input">
-                    <select asp-for="@Model.Language"
-                            asp-items="@Model.Languages">
-                        <option>Не указан</option>
-                    </select>
-                </div>
+                <li class="edit-block_item">
+                    <div class="block-item-title">Language</div>
+                    <div class="block-item-input">
+                        <select asp-for="@Model.Language"
+                                asp-items="@Model.Languages">
+                        </select>
+                        <div>@Html.ValidationMessageFor(x => x.Language)</div>
+                    </div>
+                </li>
                 <li class="edit-block_item">
                     <div class="block-item-title">Upload new image</div>
                     <div class="block-item-input"><input asp-for="@Model.NewProfileImage" type="file" /></div>
